--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form class="form-inline" method="POST" action = "{{ url_for('home') }}">
- <label for="page">Choose a page:</label>
-
-<select name="page" id="pages">
-  <option value="user">User</option>
-  <option value="shop">Shop</option>
-
-</select>
-</form>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<div class="form">
+    <form action="{{ url_for('home') }}" method="post">
+        <div class="form-group">
+            <label for="username">Enter your name</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <label for="usertype">Usertype</label>
+            <input type="text" class="form-control" name="usertype" id="usertype" placeholder="Usertype">
+        </div>
+        <button type="submit" class="btn btn-primary">Enter</button>
+    </form>
+</div>
+{% endblock %}
