--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Shop</title>
-</head>
-<body>
-<h1>Shop</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<div class="form">
+    <form action="{{ url_for('home') }}" method="post">
+        <div class="form-group">
+            <label for="username">Enter your name</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <label for="usertype">Usertype</label>
+            <input type="text" class="form-control" name="usertype" id="usertype" placeholder="Usertype">
+        </div>
+        <button type="submit" class="btn btn-primary">Enter</button>
+    </form>
+</div>
+{% endblock %}
