--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User</title>
-</head>
-<body>
-<h1>User</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<form action="{{ url_for('user.personal_index') }}" method="post">
+<div class ="container">
+    <div class="row">
+        {% for good in goods %}
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <img class="card-img-top" src="{{ url_for( 'static', filename=good.image) }}" alt="Input Image">
+              <div class="card-body">
+                <h4 class="card-title">
+                    <label> {{ good.goodname }}</label>
+                </h4>
+                    <input type="text" class="form-control" id="{{ good.goodname }}" name="{{ good.goodname }}" placeholder="Username">
+                <h5>{{ good.price }}</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+    </div>
+                      <button type="submit" class="btn btn-primary">Enter</button>
+
+</div>
+    </form>
+{% endblock %}
